--- a/Elecsite Test-Build update/update/css/login.css
+++ b/Elecsite Test-Build update/update/css/login.css
@@ -10,11 +10,16 @@
 
 /* 设置第三方登录图片 */
 img:hover {
-  box-shadow: 0px 0px 0.9375rem whitesmoke;
+  transform: rotate(360deg) scale(1.35);
+  transition: 1.2s all;
+  border: 3px solid transparent;
+  border-radius: 1.25rem;
 }
 
 img {
-  box-shadow: 0px 0px 0.125rem black;
+  transition: 1.2s all;
+  padding: 2px;
+  border: 3px inset rgba(255, 255, 255, 0.5);
   border-radius: 1.25rem;
   width: 2rem;
   height: 2rem;
@@ -22,6 +27,7 @@ img {
 
 /* 表单设置（用户名、密码） */
 input {
+  border: 1.5px inset rgba(255, 255, 255, 0.5);
   outline: none;
   border: none;
   margin-top: 0.625rem;
@@ -30,12 +36,14 @@ input {
 }
 
 #input_usrname:focus {
-  border-radius: 17px;
+  border: 2.5px inset rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
   transition: all 1s;
 }
 
 #input_password:focus {
-  border-radius: 17px;
+  border: 2.5px inset rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
   transition: all 1s;
 }
 
@@ -44,22 +52,22 @@ a {
 }
 
 /* 最外层设置 */
-.public_main {
+.main {
   margin: none;
   margin: 0px;
   height: 100%;
   overflow: hidden;
-  background: linear-gradient(to left, #9cecfb, #65c7f7, #0052d4);
+  background-image: linear-gradient(135deg, #F6D242 10%, #FF52E5 100%);
 }
 
 /*主体浮动设置*/
-.public_main_flex {
+.main_flex {
   display: flex;
   flex: 1;
 }
 
 /* 第二层文字div浮动设置 */
-.public_text_main_flex {
+.text_main_flex {
   display: flexbox;
   width: 44.75rem;
   height: 25rem;
@@ -68,43 +76,48 @@ a {
   margin-top: 10%;
 }
 
-/* 设置文字部分样式 */
-.public_text_font_style {
-  border: 0.1px solid whitesmoke;
+/* 设置文字部分样式\背景 */
+
+.text_font_style {
+  background: rgba(255, 255, 255, 0.4);
+  border: 5px outset;
   text-align: center;
   padding: 10% 0px;
-  margin-top: 20%;
-  border-radius: 0.625rem;
-  box-shadow: 0.625rem 0.625rem 2.5rem black;
+  margin-top: 30%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px black;
 }
 
 /* 具体文字设置 */
-.public_next_text_font_style {
+.next_text_font_style {
   font-size: 18px;
-  color: white;
+  color: black;
   line-height: 30px;
+  font-family: fontstyle2;
 }
 
 /* 主登录面板浮动设置 */
-.public_login_flex {
+.login_flex {
   display: flexbox;
   width: 44.75rem;
   height: 25rem;
   margin-top: 10%;
   margin-right: 13%;
+  margin-bottom: 10%;
 }
 
-/* 第二层登录div浮动设置 */
-.public_next_login_main {
-  border: 0.2px solid white;
+/* 第二层登录div浮动\背景设置 */
+.next_login_main {
+  border: 5px outset rgba(255, 255, 255, 0.7);
   margin: 13% 4%;
+  background: rgba(255, 255, 255, 0.35);
   padding-bottom: 2%;
-  border-radius: 0.9375rem;
-  box-shadow: 0.1875rem 0.1875rem 1.25rem black;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px black;
 }
 
 /* 字体上层整体设置 */
-.public_font_last_font_style {
+.font_last_font_style {
   padding: 2% 0px;
   margin-bottom: -2%;
 }
@@ -112,7 +125,7 @@ a {
 /* span1设置 */
 .span1 {
   font-size: 50px;
-  color: white;
+  color: black;
   font-family: fontstyle;
 }
 
@@ -129,18 +142,24 @@ a {
 }
 
 /* form表单设置 */
-.public_form {
-  padding: none
+.form {
+  padding: none;
 }
 
 /* 输入框具体设置 */
 .input1 {
-  transition: all 1s;
+  border: 2.5px inset rgba(255, 255, 255, 0.5);
+  transition: all 1.1s;
   text-align: center;
+  border-radius: 5px;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .input2 {
-  transition: all 1s;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  border: 2.5px inset rgba(255, 255, 255, 0.5);
+  transition: all 1.1s;
   text-align: center;
 }
 
@@ -151,35 +170,45 @@ a {
 
 /* 提交按钮设置 */
 .input_submit:hover {
-  box-shadow: 0px 0px 5px black inset;
+  box-shadow: 0px 0px 15px whitesmoke inset;
+}
+
+.input_submit:active {
+  border: 2.5px inset rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 0px 25px white inset;
 }
 
 .input_submit {
+  border: 2.5px outset rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.5);
   width: 3.125rem;
   height: 1.325rem;
-  border-radius: 0.3125rem;
-  border: 2px solid whitesmoke;
   padding-bottom: 1.25rem;
+  border-radius: 5px;
   margin-bottom: 3%;
-  background: #65c7f7;
 }
 
 /* 跳转按钮设置 */
 .input_link:hover {
-  box-shadow: 0px 0px 5px black inset;
+  box-shadow: 0px 0px 15px whitesmoke inset;
+}
+
+.input_link:active {
+  border: 2.5px inset rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 0px 25px white inset;
 }
 
 .input_link {
+  background: rgba(255, 255, 255, 0.5);
   width: 9.375rem;
   height: 1.325rem;
-  border-radius: 0.3125rem;
-  border: 2px solid whitesmoke;
+  border-radius: 5px;
   padding-bottom: 1.25rem;
-  background: #65c7f7;
+  border: 2.5px outset rgba(255, 255, 255, 0.5);
 }
 
 /* 版权设置 */
-.public_copy {
+.copy {
   position: fixed;
   bottom: 0px;
   left: 45%;
@@ -187,6 +216,6 @@ a {
   font-size: 10px;
 }
 
-.public_next_copy {
+.next_copy {
   padding-bottom: 5px;
 }
